--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
     <title>Document</title>
   </head>
   <body>
@@ -55,6 +56,17 @@
             </li>
           </ul>
         </address>
+
+        <button
+          type="button"
+          class="header-mobile-btn js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="header-mobile-icon" width="32px" height="22px">
+            <use href="./images/icons.svg#icon-mobile-menu-hamburger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!--? Main  -->
@@ -131,7 +143,8 @@
           <ul class="work-list list">
             <li class="work-list-item">
               <img
-                src="./images/img1.jpg"
+                srcset="./images/img1-1x.jpg 1x, ./images/img1-2x.jpg 2x"
+                src="./images/img1-1x.jpg"
                 alt="Descktop dev"
                 width="360"
                 height="300"
@@ -139,7 +152,8 @@
             </li>
             <li class="work-list-item">
               <img
-                src="./images/img2.jpg"
+                srcset="./images/img2-1x.jpg, ./images/img2-2x.jpg 2x"
+                src="./images/img2-1x.jpg"
                 alt="Mobile dev"
                 width="360"
                 height="300"
@@ -147,7 +161,8 @@
             </li>
             <li class="work-list-item">
               <img
-                src="./images/img3.jpg"
+                srcset="./images/img3-1x.jpg, ./images/img3-2x.jpg 2x"
+                src="./images/img3-1x.jpg"
                 alt="Adaptive dev"
                 width="360"
                 height="300"
@@ -163,7 +178,11 @@
           <ul class="team-list list">
             <li class="team-list-item">
               <img
-                src="./images/markguerrero1.jpg"
+                srcset="
+                  ./images/markguerrero1x.jpg 1x,
+                  ./images/markguerrero2x.jpg 2x
+                "
+                src="./images/markguerrero1x.jpg"
                 alt="Product Designer"
                 width="264"
                 height="260"
@@ -205,7 +224,8 @@
             </li>
             <li class="team-list-item">
               <img
-                src="./images/tomford2.jpg"
+                srcset="./images/tomford1x.jpg 1x, ./images/tomford2x.jpg 2x"
+                src="./images/tomford1x.jpg"
                 alt="Frontend Developer"
                 width="264"
                 height="260"
@@ -247,7 +267,11 @@
             </li>
             <li class="team-list-item">
               <img
-                src="./images/camilagarcia3.jpg"
+                srcset="
+                  ./images/camilagarcia1x.jpg 1x,
+                  ./images/camilagarcia2x.jpg 2x
+                "
+                src="./images/camilagarcia1x.jpg"
                 alt="Marketing"
                 width="264"
                 height="260"
@@ -289,7 +313,11 @@
             </li>
             <li class="team-list-item">
               <img
-                src="./images/danielwilson4.jpg"
+                srcset="
+                  ./images/danielwilson1x.jpg 1x,
+                  ./images/danielwilson2x.jpg 2x
+                "
+                src="./images/danielwilson1x.jpg"
                 alt="UI Designer"
                 width="264"
                 height="260"
@@ -436,7 +464,7 @@
               <input
                 type="email"
                 name="email"
-                class="foter-input-email"
+                class="footer-input-email"
                 placeholder="E-mail"
               />
             </label>
@@ -465,6 +493,7 @@
         </p>
 
         <form class="modal-form">
+          <!-- --------------------------------------------------------- -->
           <div class="modal-form-wrap">
             <label for="user-name" class="modal-form-label">Name</label>
             <div class="modal-input-wrap">
@@ -539,6 +568,75 @@
         </form>
       </div>
     </div>
+    <!-- ? ---------------------------------Mobile-menu----------------------------------------------->
+    <div class="mobile-menu-container js-menu-container" id="mobile-menu">
+      <button
+        type="button"
+        class="mobile-btn-close js-close-menu"
+        data-modal-close
+      >
+        <svg width="8" height="8" class="modal-icon">
+          <use href="./images/icons.svg#icon-close-btn"></use>
+        </svg>
+      </button>
+      <!-- ---------------------------------------------------------- -->
+      <ul class="mobile-menu list">
+        <li><a href="./index.html" class="mobile-nav-ref link">Studio</a></li>
+        <li>
+          <a href="./portfolio.html" class="mobile-nav-ref link">Portfolio</a>
+        </li>
+        <li><a href="" class="mobile-nav-ref link">Contacts</a></li>
+      </ul>
+      <!-- ---------------------------------------------------------- -->
+      <div class="mobile-social-wrap">
+        <ul class="mobile-address list">
+          <li class="mobile-address-item">
+            <a href="tel:+110001111111" class="mobile-address-ref link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li class="mobile-address-item">
+            <a href="mailto:info@devstudio.com" class="mobile-address-ref link"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <!-- ----------------------------------------------------------- -->
+        <ul class="mobile-social-list list">
+          <li class="mobile-social-item">
+            <a href="" class="mobile-social-ref link">
+              <svg class="mobile-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-item">
+            <a href="" class="mobile-social-ref link">
+              <svg class="mobile-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-item">
+            <a href="" class="mobile-social-ref link">
+              <svg class="mobile-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-item">
+            <a href="" class="mobile-social-ref link">
+              <svg class="mobile-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- ?--------------------------script----------------------- -->
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
