--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
       </button>
       <!-- ---------------------------------------------------------- -->
       <ul class="mobile-menu list">
-        <li><a href="./index.html" class="mobile-nav-ref link">Studio</a></li>
+        <li><a href="./index.html" class="mobile-nav-ref link current-color">Studio</a></li>
         <li>
           <a href="./portfolio.html" class="mobile-nav-ref link">Portfolio</a>
         </li>
