--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,12 @@
           >
           <ul class="nav-list list">
             <li class="nav-list-item">
-              <a href="./index.html" class="nav-list-ref link current"
-                >Studio</a
-              >
+              <a href="./index.html" class="nav-list-ref link">Studio</a>
             </li>
             <li class="nav-list-item">
-              <a href="./portfolio.html" class="nav-list-ref link">Portfolio</a>
+              <a href="./portfolio.html" class="nav-list-ref link current"
+                >Portfolio</a
+              >
             </li>
             <li class="nav-list-item">
               <a href="" class="nav-list-ref link">Contacts</a>
@@ -380,7 +380,7 @@
       <ul class="mobile-menu list">
         <li><a href="./index.html" class="mobile-nav-ref link">Studio</a></li>
         <li>
-          <a href="./portfolio.html" class="mobile-nav-ref link">Portfolio</a>
+          <a href="./portfolio.html" class="mobile-nav-ref link current-color">Portfolio</a>
         </li>
         <li><a href="" class="mobile-nav-ref link">Contacts</a></li>
       </ul>
