--- a/index.html
+++ b/index.html
@@ -375,35 +375,35 @@
             <li class="customers-item">
               <a href="" class="customers-ref link">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-Logo-1"></use>
+                  <use href="./images/icons.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-ref link">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-Logo-2"></use>
+                  <use href="./images/icons.svg#icon-Logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-ref link">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-Logo-3"></use>
+                  <use href="./images/icons.svg#icon-Logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-ref link">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-Logo-4"></use>
+                  <use href="./images/icons.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-ref link">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-Logo-5"></use>
+                  <use href="./images/icons.svg#icon-Logo5"></use>
                 </svg>
               </a>
             </li>
@@ -581,7 +581,11 @@
       </button>
       <!-- ---------------------------------------------------------- -->
       <ul class="mobile-menu list">
-        <li><a href="./index.html" class="mobile-nav-ref link current-color">Studio</a></li>
+        <li>
+          <a href="./index.html" class="mobile-nav-ref link current-color"
+            >Studio</a
+          >
+        </li>
         <li>
           <a href="./portfolio.html" class="mobile-nav-ref link">Portfolio</a>
         </li>
@@ -636,7 +640,13 @@
     </div>
 
     <!-- ?--------------------------script----------------------- -->
-    <script src="./js/mobile-menu.js"></script>
+    <script defer src="./js/mobile-menu.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
