--- a/portfolio.html
+++ b/portfolio.html
@@ -365,7 +365,7 @@
         </div>
       </div>
     </footer>
-    <!-- ? ---------------------------------Mobile-menu----------------------------------------------->
+    <!--?---------------------------------Mobile-menu----------------------------------------------->
     <div class="mobile-menu-container js-menu-container" id="mobile-menu">
       <button
         type="button"
@@ -376,7 +376,7 @@
           <use href="./images/icons.svg#icon-close-btn"></use>
         </svg>
       </button>
-      <!-- ---------------------------------------------------------- -->
+      <!------------------------------------------------------------ -->
       <ul class="mobile-menu list">
         <li><a href="./index.html" class="mobile-nav-ref link">Studio</a></li>
         <li>
@@ -384,7 +384,7 @@
         </li>
         <li><a href="" class="mobile-nav-ref link">Contacts</a></li>
       </ul>
-      <!-- ---------------------------------------------------------- -->
+      <!------------------------------------------------------------ -->
       <div class="mobile-social-wrap">
         <ul class="mobile-address list">
           <li class="mobile-address-item">
@@ -398,7 +398,7 @@
             >
           </li>
         </ul>
-        <!-- ----------------------------------------------------------- -->
+        <!------------------------------------------------------------- -->
         <ul class="mobile-social-list list">
           <li class="mobile-social-item">
             <a href="" class="mobile-social-ref link">
@@ -431,6 +431,12 @@
         </ul>
       </div>
     </div>
-    <script src="./js/mobile-menu.js"></script>
+    <script defer src="./js/mobile-menu.js"></script>
+      <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
