commit-all-apdate

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,12 +97,34 @@
             <li class="gallery-list-item">
               <a href="" class="gallery-ref link">
                 <div class="gallery-cover-wrap">
-                  <img
-                    src="./images/bankingapp-8.jpg"
-                    alt="Banking App Interface Concept"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/bankingapp-8.jpg          1x,
+                        ./images/bankingapp-descktop2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/bankingapp-tab1x.jpg 1x,
+                        ./images/bankingapp-tab2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/bankingapp-mob1x.jpg 1x,
+                        ./images/bankingapp-mob2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/bankingapp-8.jpg"
+                      alt="Banking App Interface Concept"
+                      width="396"
+                    />
+                  </picture>
 
                   <p class="gallery-iteractive-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -121,12 +143,35 @@
             <li class="gallery-list-item">
               <a href="" class="gallery-ref link">
                 <div class="gallery-cover-wrap">
-                  <img
-                    src="./images/cashlesspayment-7.jpg"
-                    alt="Cashless Payment"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/cashlesspayment-7.jpg        1x,
+                        images/cashlesspayment-descktop2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/cashlesspayment-tab1x.jpg 1x,
+                        ./images/cashlesspayment-tab2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/cashlesspayment-mob1x.jpg 1x,
+                        ./images/cashlesspayment-mob2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/cashlesspayment-7.jpg"
+                      alt="Cashless Payment"
+                      width="396"
+                    />
+                  </picture>
+
                   <p class="gallery-iteractive-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -142,12 +187,34 @@
             <li class="gallery-list-item">
               <a href="" class="gallery-ref link">
                 <div class="gallery-cover-wrap">
-                  <img
-                    src="./images/meditationapp-6.jpg"
-                    alt="Meditation App"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/meditationapp-6.jpg          1x,
+                        ./images/meditationapp-descktop2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/meditationapp-tab1x.jpg 1x,
+                        images/meditationapp-tab2x.jpg2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/meditationapp-mob1x.jpg 1x,
+                        ./images/meditationapp-mob2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/meditationapp-6.jpg"
+                      alt="Meditation App"
+                      width="396"
+                    />
+                  </picture>
 
                   <p class="gallery-iteractive-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -164,12 +231,34 @@
             <li class="gallery-list-item">
               <a href="" class="gallery-ref link">
                 <div class="gallery-cover-wrap">
-                  <img
-                    src="./images/taxiservice-5.jpg"
-                    alt="Taxi Service"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/taxiservice-5.jpg          1x,
+                        ./images/taxiservice-descktop2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/taxiservice-tab1x.jpg 1x,
+                        ./images/taxiservice-tab2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/taxiservice-mob1x.jpg 1x,
+                        ./images/taxiservice-mob2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/taxiservice-5.jpg"
+                      alt="Taxi Service"
+                      width="396"
+                    />
+                  </picture>
 
                   <p class="gallery-iteractive-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -186,12 +275,34 @@
             <li class="gallery-list-item">
               <a href="" class="gallery-ref link">
                 <div class="gallery-cover-wrap">
-                  <img
-                    src="./images/screenillustrations-4.jpg"
-                    alt="Screen Illustrations"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/screenillustrations-4.jpg          1x,
+                        ./images/screenillustrations-descktop2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/screenillustrations-tab1x.jpg 1x,
+                        ./images/screenillustrations-tab2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/screenillustrations-mob1x.jpg 1x,
+                        ./images/screenillustrations-mob2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/screenillustrations-4.jpg"
+                      alt="Screen Illustrations"
+                      width="396"
+                    />
+                  </picture>
 
                   <p class="gallery-iteractive-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -208,12 +319,34 @@
             <li class="gallery-list-item">
               <a href="" class="gallery-ref link"
                 ><div class="gallery-cover-wrap">
-                  <img
-                    src="./images/onlinecourses-3.jpg"
-                    alt="Online Courses"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/onlinecourses-3.jpg          1x,
+                        ./images/onlinecourses-descktop2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/onlinecourses-tab1x.jpg 1x,
+                        ./images/onlinecourses-tab2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/onlinecourses-mob1x.jpg 1x,
+                        ./images/onlinecourses-mob2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/onlinecourses-3.jpg"
+                      alt="Online Courses"
+                      width="396"
+                    />
+                  </picture>
 
                   <p class="gallery-iteractive-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -230,12 +363,34 @@
             <li class="gallery-list-item">
               <a href="" class="gallery-ref link"
                 ><div class="gallery-cover-wrap">
-                  <img
-                    src="./images/instagramstoriesconcept-2.jpg"
-                    alt="Instagram Stories Concept"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/instagramstoriesconcept-2.jpg          1x,
+                        ./images/instagramstoriesconcept-descktop2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/instagramstoriesconcept-tab1x.jpg 1x,
+                        ./images/instagramstoriesconcept-tab2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/instagramstoriesconcept-mob1x.jpg 1x,
+                        ./images/instagramstoriesconcept-mob2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/instagramstoriesconcept-2.jpg"
+                      alt="Instagram Stories Concept"
+                      width="396"
+                    />
+                  </picture>
 
                   <p class="gallery-iteractive-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -252,12 +407,34 @@
             <li class="gallery-list-item">
               <a href="" class="gallery-ref link"
                 ><div class="gallery-cover-wrap">
-                  <img
-                    src="./images/organicfood-1.jpg"
-                    alt="Organic Food"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/organicfood-1.jpg          1x,
+                        ./images/organicfood-descktop2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/organicfood-tab1x.jpg 1x,
+                        ./images/organicfood-tab2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/organicfood-mob1x.jpg 1x,
+                        ./images/organicfood-mob2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/organicfood-1.jpg"
+                      alt="Organic Food"
+                      width="396"
+                    />
+                  </picture>
 
                   <p class="gallery-iteractive-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -274,12 +451,34 @@
             <li class="gallery-list-item">
               <a href="" class="gallery-ref link"
                 ><div class="gallery-cover-wrap">
-                  <img
-                    src="./images/freshcoffee-0.jpg"
-                    alt="Fresh Coffee"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/freshcoffee-0.jpg          1x,
+                        ./images/freshcoffee-descktop2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/freshcoffee-tab1x.jpg 1x,
+                        ./images/freshcoffee-tab2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/freshcoffee-mob1x.jpg 1x,
+                        ./images/freshcoffee-mob2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/freshcoffee-0.jpg"
+                      alt="Fresh Coffee"
+                      width="396"
+                    />
+                  </picture>
 
                   <p class="gallery-iteractive-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -380,7 +579,9 @@
       <ul class="mobile-menu list">
         <li><a href="./index.html" class="mobile-nav-ref link">Studio</a></li>
         <li>
-          <a href="./portfolio.html" class="mobile-nav-ref link current-color">Portfolio</a>
+          <a href="./portfolio.html" class="mobile-nav-ref link current-color"
+            >Portfolio</a
+          >
         </li>
         <li><a href="" class="mobile-nav-ref link">Contacts</a></li>
       </ul>
@@ -432,7 +633,7 @@
       </div>
     </div>
     <script defer src="./js/mobile-menu.js"></script>
-      <script
+    <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
